--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,10 @@ pylint-sqlalchemy = "^0.3.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 128
+
+[tool.isort]
+line_length = 128
+profile = "black"
